digiKam 7.9.0 - Release date: 2022-xx-xx

*****************************************************************************************************
NEW FEATURES:

General: Update internal Libraw with snapshot 2002-09-03
General: Update Exiftool to 12.45 to the bundles.

*****************************************************************************************************
BUGFIXES:

001 ==> 458690 - Crash after the digiKam splash screen.
002 ==> 458627 - Unconfirmed faces do not show up.
003 ==> 458752 - Appimage isn't recognising digiKam tags in xmp sidecars.
004 ==> 458704 - Migration Database.
005 ==> 458968 - Geolocation information icon not visible.
006 ==> 458958 - Album items not sorted according to date from XMP sidecar.
007 ==> 459124 - Tags are duplicated when adding People/Face tags.
008 ==> 459370 - Merge tags dont remove old tags.
009 ==> 453621 - Error while opening the database.
010 ==> 459463 - Paste Coordinates Lost Precision.
011 ==> 459276 - Batch Queue Manager, Base tool (Convert tool): crash for some selected formats.
012 ==> 459306 - 'Ambiguous Shortcuts' Message is displayed every time digiKam is launched.
013 ==> 459822 - Blending raw images (-2,0,+2 Ev) does not result in exposure blend. (all three TIFFs are corrected for 0Ev before merging.)
014 ==> 459819 - digiKam Crashes after downloading several files.
015 ==> 459910 - Picture detail in full screen.
016 ==> 459892 - Fingerprints in maintenance mode crash.
017 ==> 398386 - Allow video frame to be saved as picture.
018 ==> 